[package]
name = "oscilloscope-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.24.0"
pixels = "0.12.1"
rusb = "0.9.2"
serial = "0.4.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
